outputs_20260331-211012-d2135dce/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm_Pwm.h:6,
                 from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\src\egtm_atom_3_phase_inverter_pwm.c:19:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm.h:12:33: error: expected ';' before 'enum'
   12 | } IfxEgtm_AeiBridgeOpModetypedef enum
      |                                 ^~~~~
      |                                 ;
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm.h:17:32: error: expected ';' before 'enum'
   17 | } IfxEgtm_ClusterClockDitypedef enum
      |                                ^~~~~
      |                                ;
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm.h:23:28: error: expected ';' before 'enum'
   23 | } IfxEgtm_IrqMode;rqtypedef enum
      |                            ^~~~~
      |                            ;
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm.h:29:32: error: expected ';' before 'enum'
   29 | } IfxEgtm_MscAltInput;tItypedef enum
      |                                ^~~~~
      |                                ;
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm.h:34:23: error: data definition has no type or storage class [-Werror]
   34 | } IfxEgtm_SuspendMode;ndMode;
      |                       ^~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm.h:34:23: error: type defaults to 'int' in declaration of 'ndMode' [-Wimplicit-int]
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm.h:64:1: error: '/*' within comment [-Werror=comment]
   64 | /* Structs */
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm.h:68:24: error: expected ';' before 'struct'
   68 | } IfxEgtm_ClApCotypedef struct
      |                        ^~~~~~~
      |                        ;
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm.h:72:17: error: expected ';' before 'struct'
   72 | } IfxEgtmtypedef struct
      |                 ^~~~~~~
      |                 ;
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm.h:75:26: error: expected ';' before 'struct'
   75 | } IfxEgtm_WrapApCotypedef struct
      |                          ^~~~~~~
      |                          ;
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm.h:78:5: error: unknown type name 'IfxEgtm_ClApConfig'
   78 |     IfxEgtm_ClApConfig   clApConfig[IFXEGTM_NUM_CCM_OBJECTS];
      |     ^~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm.h:78:37: error: 'IFXEGTM_NUM_CCM_OBJECTS' undeclared here (not in a function)
   78 |     IfxEgtm_ClApConfig   clApConfig[IFXEGTM_NUM_CCM_OBJECTS];
      |                                     ^~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm.h:79:5: error: unknown type name 'IfxEgtm_CtrlApConfig'
   79 |     IfxEgtm_CtrlApConfig ctrlApConfig;
      |     ^~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm.h:80:5: error: unknown type name 'IfxEgtm_WrapApConfig'
   80 |     IfxEgtm_WrapApConfig wrapApConfig;   typedef struct
      |     ^~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm.h:80:42: error: expected specifier-qualifier-list before 'typedef'
   80 |     IfxEgtm_WrapApConfig wrapApConfig;   typedef struct
      |                                          ^~~~~~~
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm_Pwm.h:8:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxPort.h:20:20: error: expected ';' before 'enum'
   20 | } IfxPort_Cotypedef enum
      |                    ^~~~~
      |                    ;
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxPort.h:26:30: error: expected ';' before 'enum'
   26 | } IfxPort_InputMode;rttypedef enum
      |                              ^~~~~
      |                              ;
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxPort.h:30:16: error: expected ';' before 'enum'
   30 | } IfxPortypedef enum
      |                ^~~~~
      |                ;
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxPort.h:34:16: error: expected ';' before 'enum'
   34 | } IfxPortypedef enum
      |                ^~~~~
      |                ;
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxPort.h:70:43: error: expected ',' or '}' before 'enum'
   70 |     IfxPort_Mode_outputOpenDrainAltypedef enum
      |                                           ^~~~
cc1.exe: all warnings being treated as errors

In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\mocks\mock_egtm_atom_3_phase_inverter_pwm.c:6:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm.h:12:33: error: expected ';' before 'enum'
   12 | } IfxEgtm_AeiBridgeOpModetypedef enum
      |                                 ^~~~~
      |                                 ;
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm.h:17:32: error: expected ';' before 'enum'
   17 | } IfxEgtm_ClusterClockDitypedef enum
      |                                ^~~~~
      |                                ;
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm.h:23:28: error: expected ';' before 'enum'
   23 | } IfxEgtm_IrqMode;rqtypedef enum
      |                            ^~~~~
      |                            ;
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm.h:29:32: error: expected ';' before 'enum'
   29 | } IfxEgtm_MscAltInput;tItypedef enum
      |                                ^~~~~
      |                                ;
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm.h:34:23: error: data definition has no type or storage class [-Werror]
   34 | } IfxEgtm_SuspendMode;ndMode;
      |                       ^~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm.h:34:23: error: type defaults to 'int' in declaration of 'ndMode' [-Wimplicit-int]
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm.h:64:1: error: '/*' within comment [-Werror=comment]
   64 | /* Structs */
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm.h:68:24: error: expected ';' before 'struct'
   68 | } IfxEgtm_ClApCotypedef struct
      |                        ^~~~~~~
      |                        ;
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm.h:72:17: error: expected ';' before 'struct'
   72 | } IfxEgtmtypedef struct
      |                 ^~~~~~~
      |                 ;
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm.h:75:26: error: expected ';' before 'struct'
   75 | } IfxEgtm_WrapApCotypedef struct
      |                          ^~~~~~~
      |                          ;
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm.h:78:5: error: unknown type name 'IfxEgtm_ClApConfig'
   78 |     IfxEgtm_ClApConfig   clApConfig[IFXEGTM_NUM_CCM_OBJECTS];
      |     ^~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm.h:78:37: error: 'IFXEGTM_NUM_CCM_OBJECTS' undeclared here (not in a function)
   78 |     IfxEgtm_ClApConfig   clApConfig[IFXEGTM_NUM_CCM_OBJECTS];
      |                                     ^~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm.h:79:5: error: unknown type name 'IfxEgtm_CtrlApConfig'
   79 |     IfxEgtm_CtrlApConfig ctrlApConfig;
      |     ^~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm.h:80:5: error: unknown type name 'IfxEgtm_WrapApConfig'
   80 |     IfxEgtm_WrapApConfig wrapApConfig;   typedef struct
      |     ^~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm.h:80:42: error: expected specifier-qualifier-list before 'typedef'
   80 |     IfxEgtm_WrapApConfig wrapApConfig;   typedef struct
      |                                          ^~~~~~~
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm_Pwm.h:6,
                 from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\mocks\mock_egtm_atom_3_phase_inverter_pwm.c:8:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm.h:64:1: error: '/*' within comment [-Werror=comment]
   64 | /* Structs */
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxEgtm_Pwm.h:8:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxPort.h:20:20: error: expected ';' before 'enum'
   20 | } IfxPort_Cotypedef enum
      |                    ^~~~~
      |                    ;
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxPort.h:26:30: error: expected ';' before 'enum'
   26 | } IfxPort_InputMode;rttypedef enum
      |                              ^~~~~
      |                              ;
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxPort.h:30:16: error: expected ';' before 'enum'
   30 | } IfxPortypedef enum
      |                ^~~~~
      |                ;
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxPort.h:34:16: error: expected ';' before 'enum'
   34 | } IfxPortypedef enum
      |                ^~~~~
      |                ;
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_6wwufyxn\include/IfxPort.h:70:43: error: expected ',' or '}' before 'enum'
   70 |     IfxPort_Mode_outputOpenDrainAltypedef enum
      |                                           ^~~~
cc1.exe: all warnings being treated as errors
